# tdl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml  release.yml
resources/: add_profile_template.hjson
resources/scripts/: generate_release_description.sh  insert_change_log.py
resources/test_data/github_responses/: bradharding.doomretro.latest.json  chocolate-doom.chocolate-doom.latest.json  coelckers.gzdoom.latest.json  coelckers.prboom-plus.latest.json  drfrag666.gzdoom.latest.json  fabiangreffrath.crispy-doom.latest.json  fabiangreffrath.woof.latest.json  kraflab.dsda-doom.latest.json  odamex.odamex.latest.json  team-eternity.eternity.latest.json
resources/test_data/release_cache_entries/: TorrSamaho.zandronum.latest.json  bradharding.doomretro.latest.json  chocolate-doom.chocolate-doom.latest.json  coelckers.gzdoom.latest.json  coelckers.prboom-plus.latest.json  drfrag666.gzdoom.latest.json  drfrag666.rude.latest.json  fabiangreffrath.crispy-doom.latest.json  fabiangreffrath.woof.latest.json  kraflab.dsda-doom.latest.json  odamex.odamex.latest.json  team-eternity.eternity.latest.json
src/: fake_source_port.rs  find.rs  main.rs  profile.rs  settings.rs  source_port.rs  storage.rs  wad.rs
src/commands/: iwad.rs  mod.rs  play.rs  profile.rs  source_port.rs  wad.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
tests/: iwad_import.rs  iwad_lsdir.rs  play.rs  profile_ls.rs  source_port_install.rs  source_port_ls.rs
