[package]
name = "tdl-rs"
version = "0.1.0"
edition = "2018"
default-run = "tdl"

[[bin]]
name = "tdl"
path = "src/main.rs"

[[bin]]
name = "fake_source_port"
path = "src/fake_source_port.rs"

[dependencies]
color-eyre =  "~0.5"
byteorder = "~1.4"
dirs = "~1.0"
duct = "~0.13"
env_logger = "~0.9"
lazy_static = "~1.4"
log = "~0.4"
maplit = "~1.0"
prettytable-rs = "~0.8"
regex = "~1.5"
structopt = "~0.3"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
skim = "~0.9.4"

[dev-dependencies]
assert_fs = "~1.0"
assert_cmd = "~2.0"
predicates = "~2.0"
