[package]
name = "tdl-rs"
version = "0.1.0"
edition = "2018"
default-run = "tdl"

[[bin]]
name = "tdl"
path = "src/main.rs"

[[bin]]
name = "fake_source_port"
path = "src/fake_source_port.rs"

[dependencies]
color-eyre =  "~0.5"
chrono = { version = "~0.4", features = ["serde"] }
byteorder = "~1.4"
dirs = "~1.0"
duct = "~0.13"
env_logger = "~0.9"
flate2 = "~1.0"
fs_extra = "~1.2.0"
indicatif = "~0.16"
lazy_static = "~1.4"
log = "~0.4"
maplit = "~1.0"
pkg-version = "~1.0"
prettytable-rs = "~0.8"
regex = "~1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
structopt = "~0.3"
serde = { version = "~1.0", features = ["derive"] }
serde-hjson = { version = "0.9", default-features = false }
serde_json = "~1.0"
strum = "~0.21"
strum_macros = "~0.21"
tar = "~0.4"
tempfile = "~3.2"
thiserror = "~1.0"
url = "2.2.2"
zip = "~0.5"
zip-extensions = "~0.6"

[features]
default = ["reqwest/default-tls"]
rate-limiting-tests = []

[target.'cfg(unix)'.dependencies]
skim = "~0.9.4"

[dev-dependencies]
assert_fs = "~1.0"
assert_cmd = "~2.0"
predicates = "~2.0"
sn_fake_clock = "~0.4"

[dev-dependencies.test_helpers]
path = "./test_helpers"
